# H3861-Flappybird

./: BUILD.gn  README.md
common/hals/: BUILD.gn
flappybird/: BUILD.gn
flappybird/include/: game_logic.h
flappybird/src/: button.c  common_init.c  game_logic.c  main.c  music.c
