# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #"startup:hello_world",
        #"thread_demo",
        #"timer_demo",
        #"mutex_demo",
        #"semaphore_demo"
        #"message_demo"
        #"led_demo",
        #"pwm_demo",
        #"gpio_input_demo",
        #"i2c_demo",
        #"ssd1306:oled_ssd1306",
        #"examples:oled_test",
        #"libm_port:libm_port",
        #"adc_demo",
        #"demo:qrcode_demo",
        #"src:qrcode_gen",
        "flappybird:game",
        #"udpserver:net_demo",
        #"easy_wifi/demo:wifi_demo",
        #"easy_wifi/src:easy_wifi",
        #"wifi_demo",
        #"iot_led",
        #"paho_mqtt:pahomqtt_static",
    ]
}
